logs/dag_id=tables_name_1/run_id=manual__2022-09-08T16:27:33.489429+00:00/task_id=insert_row/attempt=1.log
[2022-09-08 16:27:39,197] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: tables_name_1.insert_row manual__2022-09-08T16:27:33.489429+00:00 [queued]>
[2022-09-08 16:27:39,211] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: tables_name_1.insert_row manual__2022-09-08T16:27:33.489429+00:00 [queued]>
[2022-09-08 16:27:39,212] {taskinstance.py:1376} INFO - 
--------------------------------------------------------------------------------
[2022-09-08 16:27:39,212] {taskinstance.py:1377} INFO - Starting attempt 1 of 1
[2022-09-08 16:27:39,213] {taskinstance.py:1378} INFO - 
--------------------------------------------------------------------------------
[2022-09-08 16:27:39,230] {taskinstance.py:1397} INFO - Executing <Task(PostgresOperator): insert_row> on 2022-09-08 16:27:33.489429+00:00
[2022-09-08 16:27:39,237] {standard_task_runner.py:52} INFO - Started process 1906 to run task
[2022-09-08 16:27:39,241] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'tables_name_1', 'insert_row', 'manual__2022-09-08T16:27:33.489429+00:00', '--job-id', '4010', '--raw', '--subdir', 'DAGS_FOLDER/jobs_dag.py', '--cfg-path', '/tmp/tmp6umc3ljy', '--error-file', '/tmp/tmpnbz_985m']
[2022-09-08 16:27:39,242] {standard_task_runner.py:80} INFO - Job 4010: Subtask insert_row
[2022-09-08 16:27:39,327] {task_command.py:371} INFO - Running <TaskInstance: tables_name_1.insert_row manual__2022-09-08T16:27:33.489429+00:00 [running]> on host 4a46d6ca03fb
[2022-09-08 16:27:39,418] {taskinstance.py:1591} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=tables_name_1
AIRFLOW_CTX_TASK_ID=insert_row
AIRFLOW_CTX_EXECUTION_DATE=2022-09-08T16:27:33.489429+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-09-08T16:27:33.489429+00:00
[2022-09-08 16:27:39,433] {base.py:68} INFO - Using connection ID 'postgres_default' for task execution.
[2022-09-08 16:27:39,438] {dbapi.py:231} INFO - Running statement: INSERT INTO my_table VALUES
    (custom_id_value*, user_name_value**, timestamp_value***);, parameters: (86498967, "{ ti.xcom_pull(task_ids='bash_task', key='return_value') }", datetime.datetime(2022, 9, 8, 16, 27, 38, 814899))
[2022-09-08 16:27:39,442] {taskinstance.py:1909} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 211, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 233, in _run_command
    cur.execute(sql_statement, parameters)
psycopg2.errors.SyntaxError: syntax error at or near ","
LINE 2:     (custom_id_value*, user_name_value**, timestamp_value***...
                             ^

[2022-09-08 16:27:39,454] {taskinstance.py:1420} INFO - Marking task as FAILED. dag_id=tables_name_1, task_id=insert_row, execution_date=20220908T162733, start_date=20220908T162739, end_date=20220908T162739
[2022-09-08 16:27:39,466] {standard_task_runner.py:97} ERROR - Failed to execute job 4010 for task insert_row (syntax error at or near ","
LINE 2:     (custom_id_value*, user_name_value**, timestamp_value***...
                             ^
; 1906)
[2022-09-08 16:27:39,494] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-09-08 16:27:39,548] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
